added website and download

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Arm-java</h1>
+        <h1>ARM-Java</h1>
         <p>Java implementation of the Adaptive Regression by Mixing algorithm</p>
         <p class="view"><a href="https://github.com/ignacioarnaldo/arm-java">View the Project on GitHub <small>ignacioarnaldo/arm-java</small></a></p>
         <ul>
