added algorithm description

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ which is the maximum likelihood estimate of the variance of the errors
 <center><img src="http://latex.codecogs.com/svg.latex?\overline{e}_{m}=\{\hat{Y}_{mj}-Y_j|\overline{X_j},Y_j \in D_{f}^{(1)}\}} " border="0"/></center>
 Compute the sum of squared errors on 
 <img src="http://latex.codecogs.com/svg.latex?D^{(2)}" border="0"/> <br>
-<center><img src="http://latex.codecogs.com/svg.latex?D^{(2)} \text{, } \beta_m= \sum_{j=\frac{r}{2}+1}^r(\hat{Y_{mj}}-Y_j)^2" border="0"/></center></li>
+<center><img src="http://latex.codecogs.com/svg.latex?\beta_m= \sum_{j=\frac{r}{2}+1}^r(\hat{Y_{mj}}-Y_j)^2" border="0"/></center></li>
 	<li>Estimate the weights using:<br>
 <center><img src="http://latex.codecogs.com/svg.latex?$W_m=\frac{(\sigma_m)^{-r/2} exp(-\sigma_m^{-2}{\beta_m/2})}{\sum_{j=1}^{o}(\sigma_j)^{-r/2}exp(-\sigma_j^{-2}{\beta_j/2})}$" border="0"/> </center>
 	</li>
