--- a/index.html
+++ b/index.html
@@ -41,13 +41,7 @@
 <p>ARM fuses the predictions of a set of models according to an estimation of their accuracy. The fused model obtained with ARM is a linear combination of the predictions of the original models. 
 This way, it is possible to fuse predictions obtained with different models and algorithms. For instance, one could combine the predictions of a Neural Network with the predictions of CART etc.</p>
 
-
-
-
-
-<h1><a id="algorithm" class="anchor" href="#algorithm" aria-hidden="true"><span class="octicon octicon-link"></span></a>Algorithm</h1>
-
-<p><a href="algorithm.html">Overview of the ARM algorithm</a>.</p>
+<p>For futher details, please check the <a href="algorithm.html">overview of the ARM algorithm</a>.</p>
 
 <h1><a id="tutorial" class="anchor" href="#tutorial" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tutorial</h1>
 
